infra/k8s/chat-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: chat-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: chat-mongo
    template:
        metadata:
            labels:
                app: chat-mongo
        spec:
            containers:
                - name: chat-mongo
                  image: mongo
---
apiVersion: v1
kind: Service
metadata:
    name: chat-mongo-srv
spec:
    selector:
        app: chat-mongo
    ports:
        - name: db
          protocol: TCP
          targetPort: 27017
          port: 27017
