infra/k8s/request-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: requests-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: requests
    template:
        metadata:
            labels:
                app: requests
        spec:
            containers:
                - name: requests
                  image: tommyling79/book-trading-requests
---
apiVersion: v1
kind: Service
metadata:
    name: requests-srv
spec:
    selector:
        app: requests
    ports:
        - name: requests
          protocol: TCP
          port: 3000
          targetPort: 3000
