infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
        nginx.org/websocket-services: 'chat-srv'
spec:
    rules:
        - host: booktrading.dev
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 3000
                  - path: /api/books/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: books-srv
                            port:
                                number: 3000
                  - path: /api/requests/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: requests-srv
                            port:
                                number: 3000
                  - path: /api/chats/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: chat-srv
                            port:
                                number: 3000
                  - path: /chat/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: chat-srv
                            port:
                                number: 3000
                  - path: /socket.io/.*
                    pathType: Prefix
                    backend:
                        service:
                            name: chat-srv
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 3000
